src/parser/sqf/parser.output
Grammatik

    0 $accept: start NA

    1 start: %empty
    2      | statements

    3 statements: statement
    4           | statements ";" statement
    5           | statements "," statement

    6 statement: assignment
    7          | expression

    8 value: STRING
    9      | IDENT_N
   10      | IDENT
   11      | NUMBER
   12      | HEXNUMBER
   13      | "true"
   14      | "false"
   15      | code
   16      | array

   17 value_list: value
   18           | value_list "," value

   19 code: "{" statements "}"
   20     | "{" "}"

   21 array: "[" value_list "]"
   22      | "[" "]"

   23 assignment: "private" IDENT "=" expression
   24           | IDENT "=" expression

   25 expression: exp0

   26 exp0: exp1
   27     | exp1 OPERATOR_0 exp0
   28     | exp1 IDENT_0 exp0

   29 exp1: exp2
   30     | exp2 OPERATOR_1 exp1
   31     | exp2 IDENT_1 exp1

   32 exp2: exp3
   33     | exp3 OPERATOR_2 exp2
   34     | exp3 IDENT_2 exp2

   35 exp3: exp4
   36     | exp4 OPERATOR_3 exp3
   37     | exp4 IDENT_3 exp3

   38 exp4: exp5
   39     | exp5 OPERATOR_4 exp4
   40     | exp5 IDENT_4 exp4

   41 exp5: exp6
   42     | exp6 OPERATOR_5 exp5
   43     | exp6 IDENT_5 exp5

   44 exp6: exp7
   45     | exp7 OPERATOR_6 exp6
   46     | exp7 IDENT_6 exp6

   47 exp7: exp8
   48     | exp8 OPERATOR_7 exp7
   49     | exp8 IDENT_7 exp7

   50 exp8: exp9
   51     | exp9 OPERATOR_8 exp8
   52     | exp9 IDENT_8 exp8

   53 exp9: expu
   54     | expu OPERATOR_9 exp9
   55     | expu IDENT_9 exp9

   56 expu: OPERATOR_U expu
   57     | IDENT_U expu
   58     | "private" expu
   59     | "(" expression ")"
   60     | value


Terminale und die Regeln, in denen sie verwendet werden

NA (0) 0
error (256)
"false" (258) 14
"true" (259) 13
"private" (260) 23 58
"{" (261) 19 20
"}" (262) 19 20
"(" (263) 59
")" (264) 59
"[" (265) 21 22
"]" (266) 21 22
";" (267) 4
"," (268) 5 18
"=" (269) 23 24
OPERATOR_0 (270) 27
IDENT_0 (271) 28
OPERATOR_1 (272) 30
IDENT_1 (273) 31
OPERATOR_2 (274) 33
IDENT_2 (275) 34
OPERATOR_3 (276) 36
IDENT_3 (277) 37
OPERATOR_4 (278) 39
IDENT_4 (279) 40
OPERATOR_5 (280) 42
IDENT_5 (281) 43
OPERATOR_6 (282) 45
IDENT_6 (283) 46
OPERATOR_7 (284) 48
IDENT_7 (285) 49
OPERATOR_8 (286) 51
IDENT_8 (287) 52
OPERATOR_9 (288) 54
IDENT_9 (289) 55
OPERATOR_U (290) 56
IDENT_U (291) 57
IDENT_N (292) 9
IDENT (293) 10 23 24
NUMBER (294) 11
HEXNUMBER (295) 12
STRING (296) 8


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (42)
    auf der linken Seite: 0
start (43)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
statements (44)
    auf der linken Seite: 3 4 5, auf der rechten Seite: 2 4 5 19
statement (45)
    auf der linken Seite: 6 7, auf der rechten Seite: 3 4 5
value (46)
    auf der linken Seite: 8 9 10 11 12 13 14 15 16, auf der rechten Seite:
    17 18 60
value_list (47)
    auf der linken Seite: 17 18, auf der rechten Seite: 18 21
code (48)
    auf der linken Seite: 19 20, auf der rechten Seite: 15
array (49)
    auf der linken Seite: 21 22, auf der rechten Seite: 16
assignment (50)
    auf der linken Seite: 23 24, auf der rechten Seite: 6
expression (51)
    auf der linken Seite: 25, auf der rechten Seite: 7 23 24 59
exp0 (52)
    auf der linken Seite: 26 27 28, auf der rechten Seite: 25 27 28
exp1 (53)
    auf der linken Seite: 29 30 31, auf der rechten Seite: 26 27 28
    30 31
exp2 (54)
    auf der linken Seite: 32 33 34, auf der rechten Seite: 29 30 31
    33 34
exp3 (55)
    auf der linken Seite: 35 36 37, auf der rechten Seite: 32 33 34
    36 37
exp4 (56)
    auf der linken Seite: 38 39 40, auf der rechten Seite: 35 36 37
    39 40
exp5 (57)
    auf der linken Seite: 41 42 43, auf der rechten Seite: 38 39 40
    42 43
exp6 (58)
    auf der linken Seite: 44 45 46, auf der rechten Seite: 41 42 43
    45 46
exp7 (59)
    auf der linken Seite: 47 48 49, auf der rechten Seite: 44 45 46
    48 49
exp8 (60)
    auf der linken Seite: 50 51 52, auf der rechten Seite: 47 48 49
    51 52
exp9 (61)
    auf der linken Seite: 53 54 55, auf der rechten Seite: 50 51 52
    54 55
expu (62)
    auf der linken Seite: 56 57 58 59 60, auf der rechten Seite: 53
    54 55 56 57 58


Zustand 0

    0 $accept: . start NA

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 3 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 10 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    $default  reduziere mit Regel 1 (start)

    start       gehe zu Zustand 14 über
    statements  gehe zu Zustand 15 über
    statement   gehe zu Zustand 16 über
    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    assignment  gehe zu Zustand 20 über
    expression  gehe zu Zustand 21 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 1

   14 value: "false" .

    $default  reduziere mit Regel 14 (value)


Zustand 2

   13 value: "true" .

    $default  reduziere mit Regel 13 (value)


Zustand 3

   23 assignment: "private" . IDENT "=" expression
   58 expu: "private" . expu

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 34 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    expu   gehe zu Zustand 35 über


Zustand 4

   19 code: "{" . statements "}"
   20     | "{" . "}"

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 3 über
    "{"         schiebe und gehe zu Zustand 4 über
    "}"         schiebe und gehe zu Zustand 36 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 10 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    statements  gehe zu Zustand 37 über
    statement   gehe zu Zustand 16 über
    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    assignment  gehe zu Zustand 20 über
    expression  gehe zu Zustand 21 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 5

   59 expu: "(" . expression ")"

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    expression  gehe zu Zustand 39 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 6

   21 array: "[" . value_list "]"
   22      | "[" . "]"

    "false"    schiebe und gehe zu Zustand 1 über
    "true"     schiebe und gehe zu Zustand 2 über
    "{"        schiebe und gehe zu Zustand 4 über
    "["        schiebe und gehe zu Zustand 6 über
    "]"        schiebe und gehe zu Zustand 40 über
    IDENT_N    schiebe und gehe zu Zustand 9 über
    IDENT      schiebe und gehe zu Zustand 38 über
    NUMBER     schiebe und gehe zu Zustand 11 über
    HEXNUMBER  schiebe und gehe zu Zustand 12 über
    STRING     schiebe und gehe zu Zustand 13 über

    value       gehe zu Zustand 41 über
    value_list  gehe zu Zustand 42 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über


Zustand 7

   56 expu: OPERATOR_U . expu

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    expu   gehe zu Zustand 43 über


Zustand 8

   57 expu: IDENT_U . expu

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    expu   gehe zu Zustand 44 über


Zustand 9

    9 value: IDENT_N .

    $default  reduziere mit Regel 9 (value)


Zustand 10

   10 value: IDENT .
   24 assignment: IDENT . "=" expression

    "="  schiebe und gehe zu Zustand 45 über

    $default  reduziere mit Regel 10 (value)


Zustand 11

   11 value: NUMBER .

    $default  reduziere mit Regel 11 (value)


Zustand 12

   12 value: HEXNUMBER .

    $default  reduziere mit Regel 12 (value)


Zustand 13

    8 value: STRING .

    $default  reduziere mit Regel 8 (value)


Zustand 14

    0 $accept: start . NA

    NA  schiebe und gehe zu Zustand 46 über


Zustand 15

    2 start: statements .
    4 statements: statements . ";" statement
    5           | statements . "," statement

    ";"  schiebe und gehe zu Zustand 47 über
    ","  schiebe und gehe zu Zustand 48 über

    $default  reduziere mit Regel 2 (start)


Zustand 16

    3 statements: statement .

    $default  reduziere mit Regel 3 (statements)


Zustand 17

   60 expu: value .

    $default  reduziere mit Regel 60 (expu)


Zustand 18

   15 value: code .

    $default  reduziere mit Regel 15 (value)


Zustand 19

   16 value: array .

    $default  reduziere mit Regel 16 (value)


Zustand 20

    6 statement: assignment .

    $default  reduziere mit Regel 6 (statement)


Zustand 21

    7 statement: expression .

    $default  reduziere mit Regel 7 (statement)


Zustand 22

   25 expression: exp0 .

    $default  reduziere mit Regel 25 (expression)


Zustand 23

   26 exp0: exp1 .
   27     | exp1 . OPERATOR_0 exp0
   28     | exp1 . IDENT_0 exp0

    OPERATOR_0  schiebe und gehe zu Zustand 49 über
    IDENT_0     schiebe und gehe zu Zustand 50 über

    $default  reduziere mit Regel 26 (exp0)


Zustand 24

   29 exp1: exp2 .
   30     | exp2 . OPERATOR_1 exp1
   31     | exp2 . IDENT_1 exp1

    OPERATOR_1  schiebe und gehe zu Zustand 51 über
    IDENT_1     schiebe und gehe zu Zustand 52 über

    $default  reduziere mit Regel 29 (exp1)


Zustand 25

   32 exp2: exp3 .
   33     | exp3 . OPERATOR_2 exp2
   34     | exp3 . IDENT_2 exp2

    OPERATOR_2  schiebe und gehe zu Zustand 53 über
    IDENT_2     schiebe und gehe zu Zustand 54 über

    $default  reduziere mit Regel 32 (exp2)


Zustand 26

   35 exp3: exp4 .
   36     | exp4 . OPERATOR_3 exp3
   37     | exp4 . IDENT_3 exp3

    OPERATOR_3  schiebe und gehe zu Zustand 55 über
    IDENT_3     schiebe und gehe zu Zustand 56 über

    $default  reduziere mit Regel 35 (exp3)


Zustand 27

   38 exp4: exp5 .
   39     | exp5 . OPERATOR_4 exp4
   40     | exp5 . IDENT_4 exp4

    OPERATOR_4  schiebe und gehe zu Zustand 57 über
    IDENT_4     schiebe und gehe zu Zustand 58 über

    $default  reduziere mit Regel 38 (exp4)


Zustand 28

   41 exp5: exp6 .
   42     | exp6 . OPERATOR_5 exp5
   43     | exp6 . IDENT_5 exp5

    OPERATOR_5  schiebe und gehe zu Zustand 59 über
    IDENT_5     schiebe und gehe zu Zustand 60 über

    $default  reduziere mit Regel 41 (exp5)


Zustand 29

   44 exp6: exp7 .
   45     | exp7 . OPERATOR_6 exp6
   46     | exp7 . IDENT_6 exp6

    OPERATOR_6  schiebe und gehe zu Zustand 61 über
    IDENT_6     schiebe und gehe zu Zustand 62 über

    $default  reduziere mit Regel 44 (exp6)


Zustand 30

   47 exp7: exp8 .
   48     | exp8 . OPERATOR_7 exp7
   49     | exp8 . IDENT_7 exp7

    OPERATOR_7  schiebe und gehe zu Zustand 63 über
    IDENT_7     schiebe und gehe zu Zustand 64 über

    $default  reduziere mit Regel 47 (exp7)


Zustand 31

   50 exp8: exp9 .
   51     | exp9 . OPERATOR_8 exp8
   52     | exp9 . IDENT_8 exp8

    OPERATOR_8  schiebe und gehe zu Zustand 65 über
    IDENT_8     schiebe und gehe zu Zustand 66 über

    $default  reduziere mit Regel 50 (exp8)


Zustand 32

   53 exp9: expu .
   54     | expu . OPERATOR_9 exp9
   55     | expu . IDENT_9 exp9

    OPERATOR_9  schiebe und gehe zu Zustand 67 über
    IDENT_9     schiebe und gehe zu Zustand 68 über

    $default  reduziere mit Regel 53 (exp9)


Zustand 33

   58 expu: "private" . expu

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    expu   gehe zu Zustand 35 über


Zustand 34

   10 value: IDENT .
   23 assignment: "private" IDENT . "=" expression

    "="  schiebe und gehe zu Zustand 69 über

    $default  reduziere mit Regel 10 (value)


Zustand 35

   58 expu: "private" expu .

    $default  reduziere mit Regel 58 (expu)


Zustand 36

   20 code: "{" "}" .

    $default  reduziere mit Regel 20 (code)


Zustand 37

    4 statements: statements . ";" statement
    5           | statements . "," statement
   19 code: "{" statements . "}"

    "}"  schiebe und gehe zu Zustand 70 über
    ";"  schiebe und gehe zu Zustand 47 über
    ","  schiebe und gehe zu Zustand 48 über


Zustand 38

   10 value: IDENT .

    $default  reduziere mit Regel 10 (value)


Zustand 39

   59 expu: "(" expression . ")"

    ")"  schiebe und gehe zu Zustand 71 über


Zustand 40

   22 array: "[" "]" .

    $default  reduziere mit Regel 22 (array)


Zustand 41

   17 value_list: value .

    $default  reduziere mit Regel 17 (value_list)


Zustand 42

   18 value_list: value_list . "," value
   21 array: "[" value_list . "]"

    "]"  schiebe und gehe zu Zustand 72 über
    ","  schiebe und gehe zu Zustand 73 über


Zustand 43

   56 expu: OPERATOR_U expu .

    $default  reduziere mit Regel 56 (expu)


Zustand 44

   57 expu: IDENT_U expu .

    $default  reduziere mit Regel 57 (expu)


Zustand 45

   24 assignment: IDENT "=" . expression

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    expression  gehe zu Zustand 74 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 46

    0 $accept: start NA .

    $default  annehmen


Zustand 47

    4 statements: statements ";" . statement

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 3 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 10 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    statement   gehe zu Zustand 75 über
    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    assignment  gehe zu Zustand 20 über
    expression  gehe zu Zustand 21 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 48

    5 statements: statements "," . statement

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 3 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 10 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    statement   gehe zu Zustand 76 über
    value       gehe zu Zustand 17 über
    code        gehe zu Zustand 18 über
    array       gehe zu Zustand 19 über
    assignment  gehe zu Zustand 20 über
    expression  gehe zu Zustand 21 über
    exp0        gehe zu Zustand 22 über
    exp1        gehe zu Zustand 23 über
    exp2        gehe zu Zustand 24 über
    exp3        gehe zu Zustand 25 über
    exp4        gehe zu Zustand 26 über
    exp5        gehe zu Zustand 27 über
    exp6        gehe zu Zustand 28 über
    exp7        gehe zu Zustand 29 über
    exp8        gehe zu Zustand 30 über
    exp9        gehe zu Zustand 31 über
    expu        gehe zu Zustand 32 über


Zustand 49

   27 exp0: exp1 OPERATOR_0 . exp0

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    exp0   gehe zu Zustand 77 über
    exp1   gehe zu Zustand 23 über
    exp2   gehe zu Zustand 24 über
    exp3   gehe zu Zustand 25 über
    exp4   gehe zu Zustand 26 über
    exp5   gehe zu Zustand 27 über
    exp6   gehe zu Zustand 28 über
    exp7   gehe zu Zustand 29 über
    exp8   gehe zu Zustand 30 über
    exp9   gehe zu Zustand 31 über
    expu   gehe zu Zustand 32 über


Zustand 50

   28 exp0: exp1 IDENT_0 . exp0

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    exp0   gehe zu Zustand 78 über
    exp1   gehe zu Zustand 23 über
    exp2   gehe zu Zustand 24 über
    exp3   gehe zu Zustand 25 über
    exp4   gehe zu Zustand 26 über
    exp5   gehe zu Zustand 27 über
    exp6   gehe zu Zustand 28 über
    exp7   gehe zu Zustand 29 über
    exp8   gehe zu Zustand 30 über
    exp9   gehe zu Zustand 31 über
    expu   gehe zu Zustand 32 über


Zustand 51

   30 exp1: exp2 OPERATOR_1 . exp1

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    exp1   gehe zu Zustand 79 über
    exp2   gehe zu Zustand 24 über
    exp3   gehe zu Zustand 25 über
    exp4   gehe zu Zustand 26 über
    exp5   gehe zu Zustand 27 über
    exp6   gehe zu Zustand 28 über
    exp7   gehe zu Zustand 29 über
    exp8   gehe zu Zustand 30 über
    exp9   gehe zu Zustand 31 über
    expu   gehe zu Zustand 32 über


Zustand 52

   31 exp1: exp2 IDENT_1 . exp1

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    exp1   gehe zu Zustand 80 über
    exp2   gehe zu Zustand 24 über
    exp3   gehe zu Zustand 25 über
    exp4   gehe zu Zustand 26 über
    exp5   gehe zu Zustand 27 über
    exp6   gehe zu Zustand 28 über
    exp7   gehe zu Zustand 29 über
    exp8   gehe zu Zustand 30 über
    exp9   gehe zu Zustand 31 über
    expu   gehe zu Zustand 32 über


Zustand 53

   33 exp2: exp3 OPERATOR_2 . exp2

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über

    value  gehe zu Zustand 17 über
    code   gehe zu Zustand 18 über
    array  gehe zu Zustand 19 über
    exp2   gehe zu Zustand 81 über
    exp3   gehe zu Zustand 25 über
    exp4   gehe zu Zustand 26 über
    exp5   gehe zu Zustand 27 über
    exp6   gehe zu Zustand 28 über
    exp7   gehe zu Zustand 29 über
    exp8   gehe zu Zustand 30 über
    exp9   gehe zu Zustand 31 über
    expu   gehe zu Zustand 32 über


Zustand 54

   34 exp2: exp3 IDENT_2 . exp2

    "false"     schiebe und gehe zu Zustand 1 über
    "true"      schiebe und gehe zu Zustand 2 über
    "private"   schiebe und gehe zu Zustand 33 über
    "{"         schiebe und gehe zu Zustand 4 über
    "("         schiebe und gehe zu Zustand 5 über
    "["         schiebe und gehe zu Zustand 6 über
    OPERATOR_U  schiebe und gehe zu Zustand 7 über
    IDENT_U     schiebe und gehe zu Zustand 8 über
    IDENT_N     schiebe und gehe zu Zustand 9 über
    IDENT       schiebe und gehe zu Zustand 38 über
    NUMBER      schiebe und gehe zu Zustand 11 über
    HEXNUMBER   schiebe und gehe zu Zustand 12 über
    STRING      schiebe und gehe zu Zustand 13 über
